--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dexie-opened-databases-addon",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "description": "An addon for Dexie.js that keeps track of opened connections",
     "main": "dist/DexieOpenedDatabasesAddon.js",
     "module": "dist/DexieOpenedDatabasesAddon.es.js",
@@ -128,16 +128,17 @@
         "karma-opera-launcher": "^1.0.0",
         "karma-qunit": "^3.1.2",
         "karma-safari-launcher": "^1.0.0",
-        "merge": ">=1.2.1",
+        "merge": "^1.2.1",
         "prettier": "^1.18.2",
         "qunit": "^2.9.2",
         "qunitjs": "^2.4.1",
-        "rollup": "^1.16.6",
+        "rollup": "^1.16.7",
         "rollup-plugin-commonjs": "^10.0.1",
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-sourcemaps": "^0.4.2",
         "uglify-es": "^3.3.9",
-        "braces": ">=2.3.1"
+        "braces": "^3.0.2",
+        "lodash": "^4.17.14"
     },
     "dependencies": {
         "dexie": "^2.0.4"
