--- a/package.json
+++ b/package.json
@@ -138,7 +138,8 @@
         "rollup-plugin-sourcemaps": "^0.4.2",
         "uglify-es": "^3.3.9",
         "braces": "^3.0.2",
-        "lodash": "^4.17.15"
+        "lodash": "^4.17.15",
+        "mixin-deep": ">=2.0.1"
     },
     "dependencies": {
         "dexie": "^2.0.4"
