--- a/package.json
+++ b/package.json
@@ -139,7 +139,8 @@
         "uglify-es": "^3.3.9",
         "braces": "^3.0.2",
         "lodash": "^4.17.15",
-        "mixin-deep": ">=2.0.1"
+        "mixin-deep": ">=2.0.1",
+        "minimist": ">=1.2.2"
     },
     "dependencies": {
         "dexie": "^2.0.4"
